# aif-rag-api

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/: exceptions.py  routes.py
app/logging/: __init__.py  config.py  context.py  formatters.py
app/models/: document.py
app/schemas/: responses.py
app/services/document_processing/: __init__.py  document_service.py  exceptions.py
app/services/document_processing/models/: base.py
app/services/document_processing/processors/: text.py
app/services/openai/: exceptions.py  openai.py
app/services/vector_storage/: __init__.py  exceptions.py  pinecone.py
scripts/: test_api.sh
tests/: conftest.py  test_app.py  test_config.py  test_logging.py  test_main.py
tests/api/: test_exceptions.py  test_routes.py
tests/logging/: conftest.py  test_config.py  test_context.py  test_init.py
tests/schemas/: test_responses.py
tests/services/document_processing/: test_document_service.py
tests/services/document_processing/processors/: test_text.py
tests/services/openai/: test_openai.py  test_openai_integration.py
tests/services/vector_storage/: test_pinecone.py  test_pinecone_integration.py  test_vector_storage_exceptions.py
